2006-02-02  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_load_source): Not builiding/updating cache in
	load_source, but doing it only after authenticating and setting up the
	folder hierarchy. Fixes #328507.

2006-01-30  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.9.0
	* NEWS : Updated

2006-01-23  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_start_book_view): Return OfflineUnavailable
	status in the offline mode if the book is not marked for offline.
	Fixes #327303, #327318.
	(e_book_backend_exchange_authenticate_user): In online mode, set the
	set the mode on ExchangeAccount before connecting. Fixes the issue of
	not able to access address book on switching to online mode.

2006-01-23  Sushma Rai  <rsushma@novell.com>

	* addressbook/e-book-backend-gal.c (load_source): Return 
	OfflineUnavailable error code if the mode is offline and GAL is not 
	marked for offline usage. Fixes #327312.

2006-01-23  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-component.c (impl_setLineStatus): Using proper
	status variable, GNOME_Evolution_ShellState, and Setting the offline
	status based on that.
	See #327343.

2006-01-18  Sushma Rai  <rsushma@novell.com>

	* configure.in : Bumped the version to 2.5.5.1
	* NEWS : Updated

2006-01-18  Chenthill Palanisamy  <pchenthill@novell.com>

	Fixes #327305
	* calendar/e-cal-backend-exchange.c: 
	(load_cache): Check if the file is present, if not, just
	return	sucess. The file will be created while saving the 
	items into the cache.

2006-01-18  Sushma Rai  <rsushma@novell.com>

	* calendar/e-cal-backend-exchange.c (open_calendar): Calling 
	exchange_account_connect(), if account for given URI is not 
	found. Fixes #327305. 

2006-01-18  Tor Lillqvist  <tml@novell.com>

	* evolution-exchange-zip.in: New file, used to build a zipfile