@@ -1,3 +1,9 @@
+2006-02-06  Chenthill Palanisamy  <pchenthill@novell.com>
+
+	* calendar/e-cal-backend-exchange.c: (open_calendar), 
+	(is_loaded), (class_init): Added the implementation.
+	(set_mode): Notify read only status to the client. 
+	
 2006-02-02  Sushma Rai  <rsushma@novell.com>
 
 	* addressbook/e-book-backend-exchange.c 
